Hair particles: hair particle rekey disolves the hair, then crashes Blender #69488

Closed
opened 2019-09-04 13:57:53 +02:00 by Yegor · 5 comments

System Information
Operating system: Linux-3.10.0-957.10.1.el7.x86_64-x86_64-with-centos-7.6.1810-Core 64 Bits
Graphics card: GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 418.56

Blender Version
Broken: version: 2.81 (sub 4), branch: master, commit date: 2019-09-02 15:37, hash: 283d96de11
Worked: 2.79

Short description of error
Trying rekeying a hair breaks the strand, then leads crashes with the keys number > 6

That worked in 2.79, but for some reason the hair behaved like there is still the starting number of keys. And what's the difference between rekeying and subdividing?

Exact steps for others to reproduce the error

Open the file attached
Go into particle edit mode
Select a hair
Go to rekey
Increase the number of keys until the hair disappears, then crash.

hair_particles_rekey_crash.blend

**System Information** Operating system: Linux-3.10.0-957.10.1.el7.x86_64-x86_64-with-centos-7.6.1810-Core 64 Bits Graphics card: GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 418.56 **Blender Version** Broken: version: 2.81 (sub 4), branch: master, commit date: 2019-09-02 15:37, hash: `283d96de11` Worked: 2.79 **Short description of error** Trying rekeying a hair breaks the strand, then leads crashes with the keys number > 6 That worked in 2.79, but for some reason the hair behaved like there is still the starting number of keys. And what's the difference between rekeying and subdividing? **Exact steps for others to reproduce the error** Open the file attached Go into particle edit mode Select a hair Go to rekey Increase the number of keys until the hair disappears, then crash. [hair_particles_rekey_crash.blend](https://archive.blender.org/developer/F7716291/hair_particles_rekey_crash.blend)
Author

Added subscriber: @YegorSmirnov

Added subscriber: @YegorSmirnov
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Can confirm this.
This might just be a viewport drawing thingie, needs more investigation...

That worked in 2.79, but for some reason the hair behaved like there is still the starting number of keys.

That is because if you increase the number of keys, you also need to increase the number of drawing steps
In 2.8 this is Sidebar > Tool > Options > Viewport Display > Paths steps
In 2.79 this is Toolbar > Tools >Options > Draw > Paths steps

And what's the difference between rekeying and subdividing?

Well rekeying will allow for an arbitrary number of keys [could be lower than the original as well], whereas subdivide only gives you double the amount of keys...

As usual I would like to point out that Hair editing/dynamics are in a bad state in 2.8, (I am going over reports atm -- there are lots of regressions), and I would not hold my breath for timely fixes, since hair is basically EOL, see https://wiki.blender.org/wiki/Modules.
I still think it is good to gather all the issues (so thx for reporting!), either to fix these or to have an example of what the new system needs to take care of...

Can confirm this. This might just be a viewport drawing thingie, needs more investigation... > That worked in 2.79, but for some reason the hair behaved like there is still the starting number of keys. That is because if you increase the number of keys, you also need to increase the number of drawing steps In 2.8 this is `Sidebar` > `Tool` > `Options` > `Viewport Display` > `Paths steps` In 2.79 this is `Toolbar` > `Tools` >`Options` > `Draw` > `Paths steps` > And what's the difference between rekeying and subdividing? Well rekeying will allow for an arbitrary number of keys [could be lower than the original as well], whereas subdivide only gives you double the amount of keys... As usual I would like to point out that Hair editing/dynamics are in a bad state in 2.8, (I am going over reports atm -- there are lots of regressions), and I would not hold my breath for timely fixes, since hair is basically EOL, see https://wiki.blender.org/wiki/Modules. I still think it is good to gather all the issues (so thx for reporting!), either to fix these or to have an example of what the new system needs to take care of...

This issue was referenced by cf2c09002f

This issue was referenced by cf2c09002fae1e5b11acc0f21b67ffb29212ad7a
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Philipp Oeser self-assigned this 2019-09-26 17:34:06 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#69488
No description provided.