source/blender/editors/transform/transform_convert.c
@@ -2251,7 +2251,7 @@ void special_aftertrans_update(bContext *C, TransInfo *t)
     /* pass */
   }
   else if ((t->view_layer->basact) && (ob = t->view_layer->basact->object) &&
-           (ob->mode & OB_MODE_PARTICLE_EDIT) && PE_get_current(t->scene, ob)) {
+           (ob->mode & OB_MODE_PARTICLE_EDIT) && PE_get_current(t->depsgraph, t->scene, ob)) {
     /* do nothing */
   }
   else if (t->flag & T_CURSOR) {
@@ -2668,7 +2668,8 @@ void createTransData(bContext *C, TransInfo *t)
       }
     }
   }
-  else if (ob && (ob->mode & OB_MODE_PARTICLE_EDIT) && PE_start_edit(PE_get_current(scene, ob))) {
+  else if (ob && (ob->mode & OB_MODE_PARTICLE_EDIT) &&
+           PE_start_edit(PE_get_current(t->depsgraph, scene, ob))) {
     createTransParticleVerts(C, t);
     countAndCleanTransDataContainer(t);
     t->flag |= T_POINTS;
